force-app/main/default/objects/Trust__c/Trust__c.object-meta.xml
<CustomObject>
    <description>Record the history of trust agreements for a beneficiary</description>
    <label>Trust</label>
    <nameField>
        <label>Trust ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trusts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>