force-app/main/default/objects/Trust__c/fields/ABLE_Account__c.field-meta.xml
<CustomField>
    <fullName>ABLE_Account__c</fullName>
    <formula>TEXT( Beneficiary__r.ABLE_Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABLE Account</label>
    <type>Text</type>
</CustomField>