force-app/main/default/objects/Trust__c/fields/Account_Closed__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Closed</label>
    <type>Checkbox</type>
</CustomField>