force-app/main/default/objects/Trust__c/fields/Acko_Policies_Received__c.field-meta.xml
<CustomField>
    <fullName>Acko_Policies_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOP Received</label>
    <type>Checkbox</type>
</CustomField>