force-app/main/default/objects/Trust__c/fields/Additional_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Additional_Deposits__c</fullName>
    <inlineHelpText>Rollup of Amount field from Funding records where Type is Additional</inlineHelpText>
    <label>Additional Deposits</label>
    <summarizedField>Funding__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding__c.Type__c</field>
        <operation>equals</operation>
        <value>Additional</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding__c.Trust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>