force-app/main/default/objects/Trust__c/fields/Alt_Rep_Additional_Funding__c.field-meta.xml
<CustomField>
    <fullName>Alt_Rep_Additional_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alt Rep Additional Funding</label>
    <type>Checkbox</type>
</CustomField>