force-app/main/default/objects/Trust__c/fields/Alt_Rep_Requests_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Alt_Rep_Requests_Disbursements__c</fullName>
    <label>Alt Rep Requests Disbursements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>