force-app/main/default/objects/Trust__c/fields/Alternate_Rep_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Rep_Birthdate__c</fullName>
    <formula>Alternate_Representative__r.Birthdate_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update Birthdate, go to the Alternate Rep&apos;s Person Account record</inlineHelpText>
    <label>Alternate Rep Birthdate</label>
    <type>Date</type>
</CustomField>