force-app/main/default/objects/Trust__c/fields/Alternate_Representative__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To modify the Alternate Representative, change the Role field on the Relationship record associated with this Trust.</inlineHelpText>
    <label>Alternate Representative</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trusts (Alternative Representative)</relationshipLabel>
    <relationshipName>Trusts2</relationshipName>
    <type>Lookup</type>
</CustomField>