force-app/main/default/objects/Trust__c/fields/Alternate_Representative_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Representative_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To modify the Alternate Representative, change the Role field on the Relationship record associated with this Trust.</inlineHelpText>
    <label>Alternate Representative Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trusts (Alternate Representative)</relationshipLabel>
    <relationshipName>Trusts4</relationshipName>
    <type>Lookup</type>
</CustomField>