force-app/main/default/objects/Trust__c/fields/Annual_Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Annual_Accounting_Notes__c</fullName>
    <label>Annual Accounting Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>