force-app/main/default/objects/Trust__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trusts (Attorney)</relationshipLabel>
    <relationshipName>Trusts2</relationshipName>
    <type>Lookup</type>
</CustomField>