force-app/main/default/objects/Trust__c/fields/Attorney_Account__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trusts (Attorney Account)</relationshipLabel>
    <relationshipName>Trusts4</relationshipName>
    <type>Lookup</type>
</CustomField>