force-app/main/default/objects/Trust__c/fields/Attorney_CC_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Attorney_CC_for_Templates__c</fullName>
    <formula>IF(!ISBLANK(Attorney__c), &quot;CC: &quot; + Attorney__r.Full_Name__c + &quot;, Attorney&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney  CC for Templates</label>
    <type>Text</type>
</CustomField>