force-app/main/default/objects/Trust__c/fields/Attorney_Email__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Email__c</fullName>
    <formula>Attorney__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney Email</label>
    <type>Text</type>
</CustomField>