force-app/main/default/objects/Trust__c/fields/Attorney_Grantor_CC_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Grantor_CC_for_Templates__c</fullName>
    <formula>IF(AND(!ISBLANK(Attorney__c), Attorney__r.AccountId !=  Grantor__c), &quot;CC: &quot; + Attorney__r.Full_Name__c + &quot;, Attorney&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney Grantor CC for Templates</label>
    <type>Text</type>
</CustomField>