force-app/main/default/objects/Trust__c/fields/Beneficiary_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Account_Number__c</fullName>
    <formula>Beneficiary__r.Full_Name__c + &quot; - &quot; + Internal_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary/Account Number</label>
    <type>Text</type>
</CustomField>