force-app/main/default/objects/Trust__c/fields/Beneficiary_Folder__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Folder__c</fullName>
    <label>Beneficiary Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>