force-app/main/default/objects/Trust__c/fields/Beneficiary_is_Primary_Rep__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_is_Primary_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficiary is Primary Rep</label>
    <type>Checkbox</type>
</CustomField>