force-app/main/default/objects/Trust__c/fields/Beneficiary_Last_Name_First_Letter__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Last_Name_First_Letter__c</fullName>
    <formula>Left( Beneficiary__r.LastName ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary Last Name First Letter</label>
    <type>Text</type>
</CustomField>