force-app/main/default/objects/Trust__c/fields/Beneficiary_of_Closings__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_of_Closings__c</fullName>
    <formula>Beneficiary__r.Number_of_Closings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary # of Closings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>