force-app/main/default/objects/Trust__c/fields/Beneficiary_Status__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Status__c</fullName>
    <formula>text(Beneficiary__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary Status</label>
    <type>Text</type>
</CustomField>