force-app/main/default/objects/Trust__c/fields/Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager__c</fullName>
    <formula>Service_Enrollment__r.Case_Manager__r.FirstName +&quot; &quot;+ Service_Enrollment__r.Case_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Manager</label>
    <type>Text</type>
</CustomField>