force-app/main/default/objects/Trust__c/fields/Caution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Caution_Summary__c</fullName>
    <formula>Beneficiary__r.Caution_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caution Summary</label>
    <type>Text</type>
</CustomField>