force-app/main/default/objects/Trust__c/fields/Charge_Initial_Set_up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Initial_Set_up_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Initial Set-up Fee</label>
    <type>Checkbox</type>
</CustomField>