force-app/main/default/objects/Trust__c/fields/Close_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Fee__c</fullName>
    <label>Close Out Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$2,000</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>