force-app/main/default/objects/Trust__c/fields/Close_Out_Fee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Fee_Comments__c</fullName>
    <label>Close Out Fee Comments</label>
    <type>TextArea</type>
</CustomField>