force-app/main/default/objects/Trust__c/fields/Closing_Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closing_Check_Amount__c</fullName>
    <formula>Closing__r.Closing_Fee__c</formula>
    <label>Closing Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>