force-app/main/default/objects/Trust__c/fields/Closing_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Closing_Check_Number__c</fullName>
    <formula>Closing__r.Closing_Check_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Check Number</label>
    <type>Text</type>
</CustomField>