force-app/main/default/objects/Trust__c/fields/Closing_Fee_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Fee_Paid_Date__c</fullName>
    <formula>Closing__r.Fees_Calculated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Fee Paid Date</label>
    <type>Date</type>
</CustomField>