force-app/main/default/objects/Trust__c/fields/Closing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closing_Reason__c</fullName>
    <formula>TEXT(Closing__r.Closing_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Reason</label>
    <type>Text</type>
</CustomField>