force-app/main/default/objects/Trust__c/fields/Court_County__c.field-meta.xml
<CustomField>
    <fullName>Court_County__c</fullName>
    <label>Court County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Texas_Counties</valueSetName>
    </valueSet>
</CustomField>