force-app/main/default/objects/Trust__c/fields/Court_Order_Document__c.field-meta.xml
<CustomField>
    <fullName>Court_Order_Document__c</fullName>
    <label>Court Order Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>