force-app/main/default/objects/Trust__c/fields/Court_Report_Due__c.field-meta.xml
<CustomField>
    <fullName>Court_Report_Due__c</fullName>
    <label>Court Report Due</label>
    <type>Date</type>
</CustomField>