force-app/main/default/objects/Trust__c/fields/Court_Website__c.field-meta.xml
<CustomField>
    <fullName>Court_Website__c</fullName>
    <label>Court Website</label>
    <type>Url</type>
</CustomField>