force-app/main/default/objects/Trust__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <length>100</length>
    <type>Text</type>
</CustomField>