force-app/main/default/objects/Trust__c/fields/Date_Annual_Accounting_Checked__c.field-meta.xml
<CustomField>
    <fullName>Date_Annual_Accounting_Checked__c</fullName>
    <label>Date Annual Accounting Checked</label>
    <type>Date</type>
</CustomField>