force-app/main/default/objects/Trust__c/fields/Date_Approved_for_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_for_Deposit__c</fullName>
    <label>Date Approved for Deposit</label>
    <type>Date</type>
</CustomField>