force-app/main/default/objects/Trust__c/fields/Date_Enrollment_Fee_Paid_by_True_Link__c.field-meta.xml
<CustomField>
    <fullName>Date_Enrollment_Fee_Paid_by_True_Link__c</fullName>
    <label>Date Enrollment Fee Paid by True Link</label>
    <type>Date</type>
</CustomField>