force-app/main/default/objects/Trust__c/fields/Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death__c</fullName>
    <formula>Closing__r.Date_of_Death__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>