force-app/main/default/objects/Trust__c/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <formula>Beneficiary__r.Deceased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>