force-app/main/default/objects/Trust__c/fields/Deduct_Enrollment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Deduct_Enrollment_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deduct Enrollment Fee</label>
    <type>Checkbox</type>
</CustomField>