force-app/main/default/objects/Trust__c/fields/Disbursement_Creation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Creation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disbursement Creation Enabled</label>
    <type>Checkbox</type>
</CustomField>