force-app/main/default/objects/Trust__c/fields/Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Status__c</fullName>
    <label>Disbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Not Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>