force-app/main/default/objects/Trust__c/fields/Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Disbursements__c</fullName>
    <inlineHelpText>Rollup of Amount field from Disbursement records</inlineHelpText>
    <label>Disbursements</label>
    <summarizedField>Disbursement_Request__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Disbursement_Request__c.Date_Disbursed__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Disbursement_Request__c.Trust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>