force-app/main/default/objects/Trust__c/fields/Distribution_Age__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Age__c</fullName>
    <label>Distribution Age</label>
    <length>100</length>
    <type>Text</type>
</CustomField>