force-app/main/default/objects/Trust__c/fields/Distribution_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Guidelines__c</fullName>
    <label>Distribution Guidelines</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>