force-app/main/default/objects/Trust__c/fields/Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Status__c</fullName>
    <label>Distribution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partially Distributed</fullName>
            </value>
            <value>
                <fullName>Fully Distributed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>