force-app/main/default/objects/Trust__c/fields/Do_Not_Send_PR_Update_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_PR_Update_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send PR Update Email</label>
    <type>Checkbox</type>
</CustomField>