force-app/main/default/objects/Trust__c/fields/Effective_Balance__c.field-meta.xml
<CustomField>
    <fullName>Effective_Balance__c</fullName>
    <label>Effective Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>