force-app/main/default/objects/Trust__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>