force-app/main/default/objects/Trust__c/fields/Enrollment_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee_Amount__c</fullName>
    <label>Enrollment Fee Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>