force-app/main/default/objects/Trust__c/fields/Enrollment_Fee_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee_Check_Number__c</fullName>
    <label>Enrollment Fee Check Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>