force-app/main/default/objects/Trust__c/fields/Enrollment_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Fee Paid</label>
    <type>Checkbox</type>
</CustomField>