force-app/main/default/objects/Trust__c/fields/Enrollment_Fee_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee_Paid_Date__c</fullName>
    <label>Enrollment Fee Paid Date</label>
    <type>Date</type>
</CustomField>