force-app/main/default/objects/Trust__c/fields/Enrollment_Fee_Verified__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Either go to Check Log and update fields or fee is being paid by True Link. Do not remove from page layout</inlineHelpText>
    <label>Enrollment Fee Verified</label>
    <type>Checkbox</type>
</CustomField>