force-app/main/default/objects/Trust__c/fields/Enrollment_Guide_Sent__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Guide_Sent__c</fullName>
    <label>Enrollment Guide Sent</label>
    <type>Date</type>
</CustomField>