force-app/main/default/objects/Trust__c/fields/Expected_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Fund_Date__c</fullName>
    <label>Expected Fund Date</label>
    <type>Date</type>
</CustomField>