force-app/main/default/objects/Trust__c/fields/Expected_Source_for_Initial_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Expected_Source_for_Initial_Deposit__c</fullName>
    <label>Expected Source for Initial Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding_Source</valueSetName>
    </valueSet>
</CustomField>