force-app/main/default/objects/Trust__c/fields/Expected_Source_Subsequent_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Expected_Source_Subsequent_Deposits__c</fullName>
    <label>Expected Source Subsequent Deposits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding_Source</valueSetName>
    </valueSet>
</CustomField>