force-app/main/default/objects/Trust__c/fields/Expected_Subsequent_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Expected_Subsequent_Deposits__c</fullName>
    <label>Expected Subsequent Deposits</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>