force-app/main/default/objects/Trust__c/fields/Funding_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Check_Number__c</fullName>
    <label>Funding Check Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>