force-app/main/default/objects/Trust__c/fields/Funds_Expected_From__c.field-meta.xml
<CustomField>
    <fullName>Funds_Expected_From__c</fullName>
    <label>Funds Expected From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>