force-app/main/default/objects/Trust__c/fields/Future_Funded__c.field-meta.xml
<CustomField>
    <fullName>Future_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Funded</label>
    <type>Checkbox</type>
</CustomField>