force-app/main/default/objects/Trust__c/fields/Grantor_2__c.field-meta.xml
<CustomField>
    <fullName>Grantor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor #2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trusts (Grantor #2)</relationshipLabel>
    <relationshipName>Trusts3</relationshipName>
    <type>Lookup</type>
</CustomField>