force-app/main/default/objects/Trust__c/fields/Grantor_2_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Grantor_2_Birthdate__c</fullName>
    <formula>Grantor_2__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grantor #2 Birthdate</label>
    <type>Date</type>
</CustomField>