force-app/main/default/objects/Trust__c/fields/Grantor_2_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grantor_2_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor #2 Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trusts (Grantor #2 Contact)</relationshipLabel>
    <relationshipName>Trusts6</relationshipName>
    <type>Lookup</type>
</CustomField>