force-app/main/default/objects/Trust__c/fields/Grantor_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Grantor_2_First_Name__c</fullName>
    <formula>Grantor_2__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grantor #2 First Name</label>
    <type>Text</type>
</CustomField>