force-app/main/default/objects/Trust__c/fields/Grantor__c.field-meta.xml
<CustomField>
    <fullName>Grantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trusts</relationshipLabel>
    <relationshipName>Trusts</relationshipName>
    <type>Lookup</type>
</CustomField>