force-app/main/default/objects/Trust__c/fields/Grantor_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Birthdate__c</fullName>
    <formula>Grantor__r.Birthdate_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update Birthdate, go to the Grantor&apos;s Person Account record</inlineHelpText>
    <label>Grantor Birthdate</label>
    <type>Date</type>
</CustomField>