force-app/main/default/objects/Trust__c/fields/Grantor_CC_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Grantor_CC_for_Templates__c</fullName>
    <formula>IF(Primary_Representative__c !=  Grantor__c, &quot;CC: &quot; + Grantor__r.PersonContact.Full_Name__c + &quot;, Grantor&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grantor CC for Templates</label>
    <type>Text</type>
</CustomField>