force-app/main/default/objects/Trust__c/fields/Grantor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trusts (Grantor Contact)</relationshipLabel>
    <relationshipName>Trusts5</relationshipName>
    <type>Lookup</type>
</CustomField>