force-app/main/default/objects/Trust__c/fields/Grantor_Email__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Email__c</fullName>
    <formula>Grantor__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grantor Email</label>
    <type>Text</type>
</CustomField>