force-app/main/default/objects/Trust__c/fields/Grantor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Grantor_First_Name__c</fullName>
    <formula>Grantor__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grantor First Name</label>
    <type>Text</type>
</CustomField>