force-app/main/default/objects/Trust__c/fields/Grantor_Is_Alt_Rep__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Is_Alt_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grantor Is Alt Rep</label>
    <type>Checkbox</type>
</CustomField>