force-app/main/default/objects/Trust__c/fields/Grantor_Is_PR__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Is_PR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grantor Is PR</label>
    <type>Checkbox</type>
</CustomField>