force-app/main/default/objects/Trust__c/fields/Grantor_Is_Rep_Payee__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Is_Rep_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grantor Is Rep Payee</label>
    <type>Checkbox</type>
</CustomField>