force-app/main/default/objects/Trust__c/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <formula>Beneficiary__r.Guardian__r.FirstName + &quot; &quot; + Beneficiary__r.Guardian__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guardian</label>
    <type>Text</type>
</CustomField>