force-app/main/default/objects/Trust__c/fields/Has_Approved_Care_Management__c.field-meta.xml
<CustomField>
    <fullName>Has_Approved_Care_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Approved Care Management</label>
    <type>Checkbox</type>
</CustomField>