force-app/main/default/objects/Trust__c/fields/HCFP_Accounting__c.field-meta.xml
<CustomField>
    <fullName>HCFP_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCFP Accounting</label>
    <type>Checkbox</type>
</CustomField>