force-app/main/default/objects/Trust__c/fields/HCFP_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HCFP_Approval_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCFP Approval Date</label>
    <type>Checkbox</type>
</CustomField>