force-app/main/default/objects/Trust__c/fields/Historical_Transaction_Total__c.field-meta.xml
<CustomField>
    <fullName>Historical_Transaction_Total__c</fullName>
    <label>Historical Transaction Total</label>
    <summarizedField>Historical_Transaction__c.Amount__c</summarizedField>
    <summaryForeignKey>Historical_Transaction__c.Trust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>