force-app/main/default/objects/Trust__c/fields/Ignore_for_Internal_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Ignore_for_Internal_Account_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore for Internal Account Number</label>
    <type>Checkbox</type>
</CustomField>