force-app/main/default/objects/Trust__c/fields/Inherited_IRA_Details__c.field-meta.xml
<CustomField>
    <fullName>Inherited_IRA_Details__c</fullName>
    <label>Inherited IRA Details</label>
    <type>TextArea</type>
</CustomField>