force-app/main/default/objects/Trust__c/fields/Initial_Deposit_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Initial_Deposit_Rollup__c</fullName>
    <inlineHelpText>Rollup of Amount field from Funding record where Type is Initial</inlineHelpText>
    <label>Initial Deposit Rollup</label>
    <summarizedField>Funding__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding__c.Type__c</field>
        <operation>equals</operation>
        <value>Initial</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding__c.Trust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>