force-app/main/default/objects/Trust__c/fields/Initial_Fund_Amount_Temporary__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fund_Amount_Temporary__c</fullName>
    <label>Initial Fund Amount (Temporary)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>