force-app/main/default/objects/Trust__c/fields/Initial_Funding_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funding_Date_Rollup__c</fullName>
    <inlineHelpText>Rollup of Date field from Funding record where Type is Initial</inlineHelpText>
    <label>Initial Funding Date Rollup</label>
    <summarizedField>Funding__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Funding__c.Type__c</field>
        <operation>equals</operation>
        <value>Initial</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding__c.Trust__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>